--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sustentabilidade</title>
-</head><link rel="stylesheet" href="">
+    <title>Sustentabilidade</title><link rel="stylesheet" href="style.css">
+</head>
 <body>
     <h1>Sustentabilidade</h1>
     <h2>A preservação do meio ambiente</h2>
@@ -17,4 +17,4 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/dDGBP5T1TY4?si=zIfuJDwPRMjW3emt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </body>
-</html>
+</html>-
